--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "nitt",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "author": "Marin Ivanov <dev@metala.org>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/metala/nitt.git"
+  },
   "scripts": {
     "build": "microbundle",
     "dev": "microbundle watch",
